--- a/index.css
+++ b/index.css
@@ -36,7 +36,7 @@ header nav a {
     position: relative;
 }
 
-h1 {
+h1, h2 {
     font-weight: 600;
     font-size: 32px;
     margin-bottom: 32px;
@@ -127,7 +127,17 @@ h1 {
     border-left: 1px solid #FF725E;
     border-radius: 0 0 8px 8px;
     margin-top: -8px;
-    padding: 24px; 
+    padding: 0 24px; 
+    height: 0;
+    opacity: 0;
+    overflow: hidden;
+    transition: .2s;
+}
+
+.duvida.ativa .paragrafo {
+    height: fit-content;
+    opacity: 1;
+    padding: 24px;
 }
 
 footer {
